--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,32 @@
 server {
+    server_tokens off;
     listen 80;
+    server_name 127.0.0.1 localhost;
+
+    location /media/ {
+        root /var/html;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /static/admin/ {
+        root /var/html;
+    }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000/api/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
