--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,11 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d                        
+            sudo docker-compose up -d
+            sudo docker-compose exec backend python manage.py migrate
+            sudo docker-compose exec backend python manage.py collectstatic --no-input
+            sudo docker-compose exec backend python manage.py load_ingredients
+            sudo docker-compose exec backend python manage.py load_tags                        
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
